/* 
  Localizable.strings
  Gittker

  Created by uuttff8 on 4/26/20.
  Copyright © 2020 Anton Kuzmin. All rights reserved.
*/

"By signing in you accept our " = "By signing in you accept our ";
"Do you really want to exit?" = "Do you really want to exit?";
"Yes" = "Yes";
"No" = "No";
"Logout" = "Logout";
"Thank You!\n\nYour report will be reviewed by Gitter team very soon." = "Thank You!\n\nYour report will be reviewed by Gitter team very soon.";
"followers" = "followers";
"following" = "following";
"public repos" = "public repos";
"Not specified" = "Not specified";
"You must select a community for your room" = "You must select a community for your room";
"Private" = "Private";
"Members can join this room" = "Members can join this room";
"Enter a room name" = "Enter a room name";
"Enter a topic (optional)" = "Enter a topic (optional)";
"When private, only people added to the room can join." = "When private, only people added to the room can join.";
"Members can join this room" = "Members can join this room";
"Create new community" = "Create new community";
"Rooms" = "Rooms";
"People" = "People";
"Settings" = "Settings";
"Please, specify community" = "Please, specify community";
"Room name is not valid" = "Room name is not valid";
"Names must be alphanumeric with no spaces. Dashes are allowed" = "Names must be alphanumeric with no spaces. Dashes are allowed";
"Create" = "Create";
"Create Room" = "Create Room";
"Send a message" = "Send a message";
"Message" = "Message";
" and " = " and ";
